[gd_scene load_steps=8 format=3 uid="uid://dd4kgsl8xo6gi"]

[ext_resource type="Theme" uid="uid://bs0txgabywvy3" path="res://themes/level_editor.tres" id="1_0k7o6"]
[ext_resource type="Texture2D" uid="uid://cq0bgbp8h6and" path="res://sprites/level_editor_icons/cr_tool_handle_top_left.png" id="1_ejbyw"]
[ext_resource type="Script" path="res://scripts/level_editor/camera_room_tool.gd" id="1_osmu5"]
[ext_resource type="Texture2D" uid="uid://bgpadio4mj5p3" path="res://sprites/level_editor_icons/updown_arrows.png" id="3_tfpvt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7aauj"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.498039, 1, 1, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1aenk"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.498039, 1, 1, 0.294118)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8agrt"]

[node name="CameraRoomTool" type="Node2D"]
script = ExtResource("1_osmu5")

[node name="Outline" type="Panel" parent="."]
offset_right = 256.0
offset_bottom = 144.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7aauj")

[node name="Width" type="SpinBox" parent="."]
offset_left = 5.0
offset_top = 13.0
offset_right = 35.0
offset_bottom = 22.0
theme = ExtResource("1_0k7o6")
theme_override_icons/updown = ExtResource("3_tfpvt")
min_value = 32.0
max_value = 512.0
value = 32.0
suffix = "w"

[node name="Height" type="SpinBox" parent="."]
offset_left = 5.0
offset_top = 24.0
offset_right = 35.0
offset_bottom = 33.0
theme = ExtResource("1_0k7o6")
theme_override_icons/updown = ExtResource("3_tfpvt")
min_value = 18.0
max_value = 288.0
value = 18.0
suffix = "h"

[node name="Button" type="Button" parent="."]
offset_right = 12.0
offset_bottom = 12.0
theme = ExtResource("1_0k7o6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1aenk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8agrt")
toggle_mode = true
icon = ExtResource("1_ejbyw")

[node name="Delete" type="Button" parent="."]
offset_left = 13.0
offset_top = 2.0
offset_right = 41.0
offset_bottom = 11.0
theme = ExtResource("1_0k7o6")
text = "Delete"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
